1999-05-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Discrete2d.m (Discrete2d): Add objectFlag.
	([MyDiscrete2d -setObjectFlag:]): New setter.
	(checkArchiverDiscrete2d): Use it.
	([MyDiscrete2d -updateArchiver:]): Use putDeep:object: or
	putDeepShallow:object: per objectFlag.
	([MyDiscrete2d -checkObject]): Check values or objects per objectFlag
	(not formerly inherited useValues or useObjects).  Repair
	logic exception case detection.
	(main): Add shallow HDF5 check.

1999-04-25  Alex Lancaster  <alex@santafe.edu>

	* Makefile.am, Discrete2d.m: New files.
